DZ2/k8s/test-for-db-init-maria-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-for-db-init-maria
  labels:
    app: test-for-db-init-maria
spec:
  containers:
    - name: test-for-db-init-maria
      image: mariadb:latest
      ports:
        - containerPort: 80
