DZ2/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rvm-dz2-service
spec:
  selector:
    app: dz2-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
  type: NodePort
